# concu-bread

./: CMakeLists.txt  README.md  concubread  log.txt  log2.txt  log8.txt  main.cpp
concurrencia/: MemoriaCompartida.h
concurrencia/fifos/: Fifo.cpp  Fifo.h  FifoEscritura.cpp  FifoEscritura.h  FifoLectura.cpp  FifoLectura.h
concurrencia/locks/: LockFile.cpp  LockFile.h
concurrencia/memoria/: MemoriaCompartida.h
concurrencia/pipes/: Pipe.cpp  Pipe.h
concurrencia/seniales/: EmpleadoSIGINTHandler.h  EventHandler.h  MaestroMasaSIGINTHandler.h  PanaderiaSIGINTHandler.h  RepartidorSIGINTHandler.h  SIGINT_handler.h  SignalHandler.cpp  SignalHandler.h
config/: Config.cpp  Config.h
logging/: Config.cpp  Logging.cpp  Logging.h
panaderia/: Empleado.cpp  Empleado.h  Maestro.cpp  Maestro.h  MaestroMasaMadre.cpp  MaestroMasaMadre.h  MaestroPanadero.cpp  MaestroPanadero.h  MaestroPizzero.cpp  MaestroPizzero.h  Panaderia.cpp  Panaderia.h  Recepcionista.cpp  Recepcionista.h  Repartidor.cpp  Repartidor.h
utilidades/: SerializadorDePedidos.cpp  SerializadorDePedidos.h
